--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
     </div>
 
     <div class="images">
-      <img src=file:///C:/Users/Dell/Downloads/Final.jpg alt="">
+       <img src="http://drive.google.com/uc?export=view&id=1Uw3OjOrUmfva5NldgIirJWL1HZbrYRic"
     </div>
   </div>
 
